[package]
name = "steveray"
version = "0.1.0"
authors = ["Steve Jenson <stevej@fruitless.org>"]
edition = "2018"
description = "A Ray Tracer, made by Steve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "gradient"
path = "bin/gradient.rs"

[[bin]]
name = "background"
path = "bin/background.rs"

[[bin]]
name = "sphere"
path = "bin/sphere.rs"
