[package]
name = "steveray"
version = "0.1.0"
authors = ["Steve Jenson <stevej@gmail.com>"]
edition = "2018"
description = "Rust port of Ray Tracing in One Weekend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
[[bin]]
name = "gradient"
path = "bin/gradient.rs"

[[bin]]
name = "background"
path = "bin/background.rs"

[[bin]]
name = "sphere"
path = "bin/sphere.rs"

[[bin]]
name = "sphere2"
path = "bin/sphere2.rs"

[[bin]]
name = "camera"
path = "bin/camera.rs"

[[bin]]
name = "diffuse"
path = "bin/diffuse.rs"

[[bin]]
name = "metal"
path = "bin/metal.rs"

[profile.release]
debug = true
